<resources>
    <string name="app_name">DroHealth</string>
    <string name="profile">Profile</string>
    <string name="doctors">Doctors</string>
    <string name="appointments">Appointments</string>
    <string name="home">Home</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="notification">Notification</string>
    <string name="filter">Filter</string>
    <string name="no_available_time_slot">No Available time Slot for that day</string>
    <string name="available_times">Available times</string>
    <string name="available_doctors">Available Doctors</string>
    <string name="view_all">View All</string>
    <string name="no_available_doctors_for_that_particular_time_slot">No Available doctors for that particular time Slot</string>
    <string name="morning">Morning</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="book_an_appointment">Book an appointment</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="upcoming">Upcoming</string>
    <string name="services">Services</string>
    <string name="no_upcoming_diagnostics">No Upcoming appointment, order or diagnostic test</string>
</resources>