<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.techkingsley.drohealth.presentation.ui.authentication.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".presentation.ui.authentication.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            app:srcCompat="@drawable/ic_dro_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmailAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_16"
            android:hint="@string/email"
            app:error="@{loginViewModel.errorEmailLiveData}"
            app:errorEnabled="true"
            app:endIconTint="@color/purple"
            app:endIconDrawable="@drawable/ic_clear"
            app:endIconMode="clear_text"
            app:endIconContentDescription="Clear email address input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.emailLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_14"
            android:hint="@string/password"
            app:error="@{loginViewModel.errorPasswordLiveData}"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/textInputEmailAddress"
            app:layout_constraintStart_toStartOf="@id/textInputEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/textInputEmailAddress"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableEnd="@drawable/ic_clear_field"
                android:inputType="textPassword"
                android:text="@={loginViewModel.passwordLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/proxi_nova_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/purple"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textInputPassword"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_60"
            android:layout_marginTop="@dimen/dimen_30"
            android:onClick="@{() -> loginViewModel.loginUser()}"
            android:text="@string/login"
            android:textSize="@dimen/text_size_20"
            app:backgroundTint="@color/turquoise"
            app:cornerRadius="@dimen/dimen_30"
            app:layout_constraintEnd_toEndOf="@id/textInputEmailAddress"
            app:layout_constraintStart_toStartOf="@id/textInputEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/textForgotPassword" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/textInputPassword"
            app:layout_constraintStart_toStartOf="@id/textInputPassword"
            app:layout_constraintTop_toBottomOf="@id/btnLogin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textDontHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_6"
                android:fontFamily="@font/proxi_nova_regular"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/grey"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/proxi_nova_regular"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_size_18"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>