<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signUpViewModel"
            type="com.techkingsley.drohealth.presentation.ui.authentication.sign_up.SignUpViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.ui.authentication.login.LoginFragment">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/dimen_150"
                android:layout_height="@dimen/dimen_150"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.09"
                app:srcCompat="@drawable/ic_dro_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputFirstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_16"
                android:hint="@string/first_name"
                app:errorEnabled="true"
                app:error="@{signUpViewModel.errorFirstNameLiveData}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconTint="@color/purple"
                app:endIconMode="clear_text"
                app:endIconContentDescription="Clear users first name input"
                app:layout_constraintTop_toBottomOf="@id/imgLogo">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={signUpViewModel.firstNameLiveData}"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginRight="@dimen/dimen_16"
                android:hint="@string/last_name"
                app:errorEnabled="true"
                app:endIconTint="@color/purple"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:endIconContentDescription="Clear users last name input"
                app:error="@{signUpViewModel.errorLastNameLiveData}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputFirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={signUpViewModel.lastNameLiveData}"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmailAddress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_12"
                android:layout_marginRight="@dimen/dimen_16"
                android:hint="@string/email"
                app:endIconTint="@color/purple"
                app:endIconDrawable="@drawable/ic_clear"
                app:endIconMode="clear_text"
                app:endIconContentDescription="Clear email address input"
                app:errorEnabled="true"
                app:error="@{signUpViewModel.errorEmailLiveData}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={signUpViewModel.emailLiveData}"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12"
                android:hint="@string/password"
                app:errorEnabled="true"
                app:error="@{signUpViewModel.errorPasswordLiveData}"
                app:layout_constraintEnd_toEndOf="@id/textInputEmailAddress"
                app:layout_constraintStart_toStartOf="@id/textInputEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/textInputEmailAddress"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@={signUpViewModel.passwordLiveData}"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignUp"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_60"
                android:layout_marginTop="@dimen/dimen_16"
                android:fontFamily="@font/proxi_nova_regular"
                android:text="@string/sign_up"
                android:textSize="@dimen/text_size_20"
                app:backgroundTint="@color/turquoise"
                app:cornerRadius="@dimen/dimen_25"
                android:onClick="@{() -> signUpViewModel.registerUser()}"
                app:layout_constraintEnd_toEndOf="@id/textInputPassword"
                app:layout_constraintStart_toStartOf="@id/textInputPassword"
                app:layout_constraintTop_toBottomOf="@id/textInputPassword" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="@dimen/dimen_0"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen_10"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/btnSignUp"
                app:layout_constraintStart_toStartOf="@id/btnSignUp"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textDontHaveAnAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_6"
                    android:fontFamily="@font/proxi_nova_regular"
                    android:gravity="center"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/proxi_nova_regular"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/text_size_18"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>